@@ -3,6 +3,7 @@ package pl.training.shop.payments.adapters.persistence.jpa;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 import pl.training.shop.commons.Page;
 import pl.training.shop.commons.ResultPage;
@@ -11,9 +12,8 @@ import pl.training.shop.payments.domain.PaymentStatus;
 import pl.training.shop.payments.ports.PaymentRepository;
 
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-@Transactional
+@Transactional(propagation = Propagation.MANDATORY)
 @Component
 @RequiredArgsConstructor
 public class JpaPaymentRepositoryAdapter implements PaymentRepository {
@@ -38,7 +38,7 @@ public class JpaPaymentRepositoryAdapter implements PaymentRepository {
     public ResultPage<Payment> getByStatus(PaymentStatus status, Page page) {
         var pageRequest = PageRequest.of(page.getNumber(), page.getSize());
         var result = paymentRepository.getByStatus(status.name(), pageRequest);
-        var data = result.getContent().stream().map(paymentMapper::toDomain).collect(Collectors.toList());
+        var data = result.getContent().stream().map(paymentMapper::toDomain).toList();
         return new ResultPage<>(data, page.getNumber(), result.getTotalPages());
     }
 
